add helper methods